Sets up server on port 3033

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "navbar/ searchbar for chompy",
   "main": "index.js",
   "scripts": {
+    "server":"nodemon ./server/index.js",
     "test": "test"
   },
   "repository": {
