--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "navbar/ searchbar for chompy",
   "main": "index.js",
   "scripts": {
-    "server":"nodemon ./server/index.js",
-    "test": "test"
+    "server": "nodemon ./server/index.js",
+    "test": "jest",
+    "react-dev": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,18 @@
   },
   "homepage": "https://github.com/codenamesgroup/search-navbar-service#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "path": "^0.12.7",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "webpack-cli": "^2.0.10"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
-    "webpack": "^4.1.0"
+    "webpack": "^3.11.0"
   }
 }
