--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/codenamesgroup/search-navbar-service#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "jquery": "^3.3.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
