--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/codenamesgroup/search-navbar-service#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.10",
     "jquery": "^3.3.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "style-loader": "^0.20.2",
     "webpack-cli": "^2.0.10"
   },
   "devDependencies": {
